# probablistic-automata

./: .gitignore  CMakeLists.txt  Communications.md  README.md  args.txt  compile_commands.json  setup.sh  statistics.html  statistics_milestone1.html  statistics_sparse_input.html
.clangd/index/: CLITest.cpp.E3F6496598764FCC.idx  ConversionMethodInterface.cpp.AB272D0515E6E5B4.idx  ConversionMethodInterface.h.14A65C1D23DB13C7.idx  DifferentialEquationModel.cpp.50B5101CD21A8181.idx  DifferentialEquationModel.h.418757441A111E68.idx  FloatingPointCompare.h.10F8E7824BBBA658.idx  KieferSchuetzenbergerReduction.h.72A09DC3ED8F2AB7.idx  KieferSchuetzenbergerReductionTest.cpp.17FDAF8DA957BFF6.idx  ModelInterface.cpp.2ADAE32A4772119A.idx  ModelInterface.h.DBD61390971CAC7A.idx  NotImplementedException.cpp.2EE0B765FC286142.idx  NotImplementedException.h.8AC5C00C876672EC.idx  ReductionMethodInterface.cpp.4D48085E2494349D.idx  ReductionMethodInterface.h.C5D58176ED93BC40.idx  RepresentationInterface.cpp.F5EC5789E4159198.idx  RepresentationInterface.h.AC6BD5AA66225B5F.idx  TestUtils.h.25BE6108A9F36A79.idx  TestsMain.cpp.65175A0CEAFA418D.idx  TextUserInterface.cpp.414B7764F5CEB2C1.idx  TextUserInterface.h.3FCDC6163E7F7D78.idx  TypeDefs.h.7656EE1545ED78E4.idx  UserInterface.cpp.987A99C8ABECBE05.idx  UserInterface.h.78E18A4CBA61794A.idx  WATest.cpp.54E08452D467BD86.idx  WeightedAutomaton.h.8DC2B56270BEE02B.idx  WeightedAutomatonModel.cpp.824763287CFF8F92.idx  WeightedAutomatonModel.h.BCB36ADE2EA45EFD.idx  main.cpp.63318356E6C1C276.idx
doc/forms/: M.Sc._CIS_PO_2019
doc/kolloquium/: main.tex
doc/paper/: paper.tex
doc/project/proposal/: proposal.kilepr  proposal.tex  themeKonstanz.sty
doc/project/software/: 0-main.tex  03-red_min.tex  04-eval.tex  05-srsdd.aux  05-srsdd.tex  project_report.kilepr  resources.bib  themeKonstanz.sty  wa_slides.tex
doc/project/software/img/: class.drawio  class_compact_wa.drawio  components.drawio
doc/project_report/: 0-main.tex  02-models.tex  03-red_min.tex  05-srs.tex  05-srsdd.tex  06-sdd.tex  beamerthemeKonstanz.sty  de_slides.tex  project_report.kilepr  resources.bib  themeKonstanz.sty  wa_slides.tex
doc/project_report/.kile/: project_report.kilepr.gui  specification.kilepr.gui
doc/project_report/img/: class.drawio  sequence_simple.drawio
doc/proposal/: proposal.kilepr  proposal.tex  resources.bib  slides.tex  themeKonstanzDBIS.sty
doc/proposal/.kile/: proposal.kilepr.gui
doc/thesis/: 00-main.tex  01-abstract.tex  02-background.tex  02-introduction.tex  03-background.tex  03-clustering_algorithms.tex  04-label_inference.tex  04-minimization_complexity.tex  05-conclusions.tex  05-evaluation.tex  06-conclusions.tex  07-appendix.tex  masterthesis.kilepr  resources.bib  scratch_pad.tex  themeKonstanz.sty
doc/thesis/.kile/: masterthesis.kilepr.gui
doc/thesis/proposal/: beamerthemeKonstanz.sty  proposal.aux  proposal.bbl  proposal.bcf  proposal.blg  proposal.run.xml  proposal.tex  resources.bib  slides.tex  themeKonstanz.sty
literature/: LiteratureWA_DE
literature/PMFCS_course/asg/: template.tex
literature/PMFCS_course/asg/02/: 02.tex
literature/both/: HandbookStochasticMethodsPhysicsChemistryNaturalDciences.djvu
literature/others/sparse_methods/: DirectMethodsSparseLinearSystems.djvu
src/: Eigen.h  FloatingPointCompare.h  NotImplementedException.cpp  NotImplementedException.h  TypeDefs.h  benchmarks.h  main.cpp
src/model/: ConversionMethodInterface.cpp  ConversionMethodInterface.h  ModelInterface.h  ReductionMethodInterface.cpp  ReductionMethodInterface.h  RepresentationInterface.h
src/model/conversions/: DifferentialEquationRuleNetworkConversion.cpp  DifferentialEquationRuleNetworkConversion.h  WeightedAutomatonRuleNetworkConversion.cpp
src/model/differential_equations/: CardelliAggregation.cpp  CardelliAggregation.h  DifferentialEquation.h  DifferentialEquationInstance.cpp  DifferentialEquationInstance.h  DifferentialEquationModel.cpp  DifferentialEquationModel.h  MaximalAggregation.cpp  MaximalAggregation.h  ReactionNetwork.h
src/model/rewrite_systems/: MaximalAggregation.h  RewriteSystem.cpp  RewriteSystem.h  RewriteSystemModel.h
src/model/rewrite_systems/rewrite_systems/: MaximalAggregation.cpp  (+2 more)
src/model/rule_networks/: MaximalAggregation.cpp  MaximalAggregation.h  ReactionNetwork.h
src/model/weighted_automata/: KieferSchuetzenbergerReduction.cpp  KieferSchuetzenbergerReduction.h  WeightedAutomaton.h  WeightedAutomatonBenchmarks.h  WeightedAutomatonInstance.cpp  WeightedAutomatonInstance.h  WeightedAutomatonModel.cpp  WeightedAutomatonModel.h
src/models/: ConversionMethodInterface.h  ModelInterface.cpp  ModelInterface.h  ReductionMethodInterface.h  RepresentationInterface.cpp  RepresentationInterface.h  Term.cpp  Term.h  benchmarks.h
src/models/conversions/: WeightedAutomatonRuleNetworkConversion.h
src/models/differential_equations/: DifferentialEquation.cpp  DifferentialEquationModel.h
src/models/rewrite_systems/: MaximalAggregation.h  RewriteSystem.cpp  RewriteSystem.h  RewriteSystemModel.h
src/models/system_of_equations/: DifferentialEquation.h  Equation.h  SystemOfEquations.cpp  SystemOfEquations.h  SystemOfEquationsModel.cpp  SystemOfEquationsModel.h  Term.h
src/models/weighted_automata/: KieferSchuetzenbergerReduction.h  WeightedAutomaton.h  WeightedAutomatonBenchmarks.h  WeightedAutomatonModel.h
src/test/: CLITest.cpp  KieferSchuetzenbergerReductionTest.cpp  RSTest.cpp  TUITest.cpp  TestUtils.h  TestsMain.cpp  WAInstanceTest.cpp  WAModelTest.cpp  WATest.cpp  WA_kiefer.m  WA_kiefer_Ste_alphastacked.m  dae_input.txt  differential_equation_input.txt  failing_equi.txt  failing_equi_1.txt  failing_equi_2.txt  failing_equi_3.txt  input_dense_test.txt  out_dense.txt  out_sparse.txt  stoichometric_input.txt  test_input.txt  test_input_dense.txt  test_input_sparse.txt
src/ui/: TextUserInterface.cpp  TextUserInterface.h  UserInterface.cpp  UserInterface.h
src/util/: DefsConstants.h  FloatingPointCompare.h  NotImplementedException.cpp  NotImplementedException.h  ParseUtils.h  TypeDefs.h
(+1 files in other folders)
